<resources>
    <string name="app_name">Afedaxo</string>
    <string name="ac_m_explanation"><b>1)</b> Take a photo of a menu\n\n<b>2)</b> Select a dish from the menu on the photo\n\n<b>3)</b> Repeat 1) and 2) if necessary\n\n<b>4)</b> Choose parameters and get dish recommendation
    </string>
    <string name="ac_m_yesno">Yes or No</string>
    <string name="ac_m_numeric">Numeric</string>
    <string name="ac_yn_enter_question">Enter your question (please read our Question Guide):</string>
    <string name="ac_yn_submit">Submit</string>
    <string name="ac_yn_youraswer">Your answer:</string>
    <string name="tutorial1_text">Have you ever had a questions in your head that you don\'t want to answer yourself?</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_process">START</string>
    <string name="select_dish">Select Dish</string>
    <string name="dish_detect_dialog_with_price">Please confirm that dish price is detected correctly: %1$s</string>
    <string name="person_num">Person %1$d</string>
    <string name="confirm">Confirm</string>
    <string name="select_again">Select Again</string>
    <string name="get_food_recommendation">Get Food Recommendation</string>
    <string name="add_new_dish">Add New Dish</string>
    <string name="how_many_people">How many people?</string>
    <string name="much">Much</string>
    <string name="little">Little</string>
    <string name="doesn_t_matter">No</string>
    <string name="does_price_matter">Does price matter?</string>
    <string name="proceed">Proceed</string>
    <string name="result">Result:</string>
    <string name="reuse_previos_photo">Reuse Previous Photo</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="afedaxo">AFEDAXO</string>
    <string name="retake_photo">Retake Photo</string>
    <string name="dish_detected">Dish Detected</string>
    <string name="please_add_at_least_2_dishes">Please take a photo of a menu and select at least 2 dishes with their prices visible</string>
    <string name="recommended_dishes_for_each_person">Recommended dishes for each person:</string>
    <string name="select_with_price">Dish is not detected! Please select dish with price</string>
    <string name="start_new_reocommendation_session">New session</string>
</resources>
