<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="com.afedaxo.presentation.ui.chooseparams.ChooseParamsViewModel"/>
    </data>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.activity.ChooseParamsActivity"
            android:orientation="vertical"
            android:gravity="center_horizontal">

        <include android:id="@+id/afdx_toolbar"
                 layout="@layout/afedaxo_toolbar"/>

        <ImageView android:layout_width="match_parent"
                   android:src="@drawable/design_2"
                   android:layout_alignParentBottom="true"
                   android:scaleType="fitXY"
                   android:adjustViewBounds="true"
                   android:layout_height="wrap_content"/>

        <ImageView
                android:id="@+id/ac_cp_people_drawable"
                android:layout_width="141dp" android:layout_height="141dp"
                android:src="@drawable/people"
                android:layout_below="@id/afdx_toolbar"
                android:layout_marginTop="18dp"
                android:layout_centerHorizontal="true"
        />

        <TextView
                android:layout_below="@id/ac_cp_people_drawable"
                android:id="@+id/ac_cp_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:includeFontPadding="false"
                app:fontFamily="@font/my_custom_font"
                android:layout_marginTop="18dp"
                android:layout_centerHorizontal="true"
                android:textColor="#303030"
                android:text="@string/how_many_people"
        />

        <com.shawnlin.numberpicker.NumberPicker
                android:id="@+id/ac_cp_number_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:np_width="180dp"
                app:np_height="64dp"
                style="@style/NumberPickerText"
                app:np_dividerColor="#303030"
                app:np_wrapSelectorWheel="true"
                app:np_orientation="horizontal"
                app:np_min="1"
                app:np_selectedTextColor="#303030"
                app:np_textColor="#68303030"
                app:np_value="1"/>


        <RadioGroup
                android:layout_below="@id/ac_cp_number_picker"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:id="@+id/radioMoneyWeight"
                android:orientation="horizontal"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:background="@drawable/rounded_box"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radioMuch"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:includeFontPadding="false"
                    app:fontFamily="@font/my_custom_font"
                    app:buttonTint="@color/colorPrimary"
                    android:layout_height="wrap_content"
                    android:text="@string/much"
                    android:textColor="#454545"
                    android:checked="true"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radioLittle"
                    android:layout_width="0dp"
                    app:buttonTint="@color/colorPrimary"
                    android:layout_weight="1"
                    android:textColor="#454545"
                    android:includeFontPadding="false"
                    app:fontFamily="@font/my_custom_font"
                    android:layout_height="wrap_content"
                    android:text="@string/little"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radioDmatter"
                    android:layout_width="0dp"
                    app:buttonTint="@color/colorPrimary"
                    android:layout_weight="1"
                    android:textColor="#454545"
                    android:includeFontPadding="false"
                    app:fontFamily="@font/my_custom_font"
                    android:layout_height="wrap_content"
                    android:text="@string/doesn_t_matter"/>

        </RadioGroup>

        <TextView
                android:layout_marginTop="17dp"
                android:layout_below="@id/ac_cp_number_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:includeFontPadding="false"
                app:fontFamily="@font/my_custom_font"
                android:textColor="#303030"
                android:layout_centerHorizontal="true"
                android:background="@android:color/white"
                android:text="@string/does_price_matter"
        />

        <com.google.android.material.button.MaterialButton
                style="@style/Button.Primary"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/ac_choo_proceed_btn"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="55dp"
                android:layout_marginRight="55dp"
                android:layout_marginBottom="35dp"
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/proceed"
        />
    </RelativeLayout>
</layout>