<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="com.afedaxo.presentation.ui.start.StartViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
                                                       android:layout_width="match_parent"
                                                       android:layout_height="match_parent"
                                                       android:background="@drawable/screen_1_copy">
        <TextView
                android:id="@+id/ac_m_title1"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="48dp"
                android:textSize="18.8sp"
                android:textColor="#454545"
                android:text="@string/welcome_to"
                app:fontFamily="@font/my_custom_font"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="wrap_content"/>

        <ImageView
                android:layout_marginTop="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ac_m_title1"
                android:id="@+id/ac_m_title2"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/afdxlogo"
                android:layout_height="wrap_content"/>


        <com.google.android.material.button.MaterialButton
                style="@style/Button.Primary"
                android:layout_marginTop="30dp"
                android:id="@+id/ac_m_start_btn"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:onClick="@{() -> viewModel.onStartProcessClick()}"
                android:text="@string/start_process"
                android:layout_width="270dp"
                android:layout_marginBottom="50dp"
                android:layout_height="wrap_content"/>

        <RelativeLayout android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/ac_m_start_btn"
                        android:layout_marginBottom="60dp"
                        app:layout_constraintTop_toBottomOf="@id/ac_m_title2">
            <TextView
                    android:text="@string/ac_m_explanation"
                    android:layout_width="wrap_content"
                    android:textSize="16sp"
                    app:fontFamily="@font/my_custom_font"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="68dp"
                    android:textColor="#454545"
                    android:layout_height="wrap_content"/>
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


